@@ -1,3 +1,6 @@
+INSTALLATION from IDLE fork 0.7.1 :
+===================================
+
 IDLE Fork Installation on Linux:
 
 Until the tarball is released, you must download a CVS copy.  An excellent
